--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
     "icon": "check-square-o"
   },
   "dependencies": {
+    "fs-extra": "^2.1.2",
+    "path-extra": "^4.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "fs-extra": "^2.1.2",
-    "path-extra": "^4.1.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "reselect": "^2.5.4"
-  },
-  "devDependencies": {
-    "mocha": "^3.2.0"
   }
 }
