--- a/package.json
+++ b/package.json
@@ -37,12 +37,6 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.0",
-    "react-redux": "^5.0.3",
-    "redux": "^3.6.0",
-    "reselect": "^2.5.4"
+    "babel-preset-stage-0": "^6.22.0"
   }
 }
