--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Javran/poi-plugin-ezexped.git"
   },
   "keywords": [
-    "kancolle"
+    "kancolle", "poi"
   ],
   "author": {
     "name": "Javran",
