--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "path-extra": "^4.1.0"
   },
   "devDependencies": {
-    "mocha": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0"
+    "babel-preset-stage-0": "^6.22.0",
+    "lodash": "^4.17.4",
+    "mocha": "^3.2.0"
   }
 }
