--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "priority": 5,
     "icon": "check-square-o"
   },
-  "dependencies": {
-    "fs-extra": "^2.1.2",
-    "path-extra": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015-node6": "^0.4.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.3",
-    "lodash": "^4.17.4",
-    "mocha": "^3.2.0"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "fs-extra": "^2.1.2",
+    "has-flag": "^2.0.0",
+    "mocha": "^3.2.0",
+    "path-extra": "^4.1.0"
   }
 }
