--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Expedition made easy",
   "main": "index.es",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive"
+    "test": "mocha --compilers js:babel-core/register --recursive",
+    "lint": "eslint '**/*.es'"
   },
   "repository": {
     "type": "git",
@@ -39,14 +40,11 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
-    "fs-extra": "^2.1.2",
-    "has-flag": "^2.0.0",
-    "mocha": "^3.2.0",
-    "path-extra": "^4.1.0"
+    "mocha": "^3.3.0"
   }
 }
