--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.es",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "lint": "eslint '**/*.es'"
+    "lint": "eslint '**/*.es' || true"
   },
   "repository": {
     "type": "git",
