--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.1.0",
-    "mocha": "^4.0.1"
+    "fs-extra": "^5.0.0",
+    "mocha": "^4.0.1",
+    "path-extra": "^4.2.1"
   }
 }
