--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "poiPlugin": {
     "title": "EZ Exped",
     "priority": 5,
-    "icon": "check-square-o"
+    "icon": "check-square-o",
+    "apiVer": {
+      "8.1.0-beta.4": "1.5.1"
+    }
   },
   "dependencies": {
     "shallowequal": "^1.0.2",
