--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Expedition made easy",
   "main": "index.es",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test": "mocha -r @babel/register --recursive",
     "lint": "eslint '**/*.es' || true"
   },
   "repository": {
@@ -33,23 +33,23 @@
     }
   },
   "dependencies": {
+    "@babel/preset-stage-0": "^7.0.0-beta.40",
     "shallowequal": "^1.0.2",
     "subtender": "^0.13.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
     "babel-eslint": "^8.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015-node6": "^0.4.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.1.0",
     "fs-extra": "^5.0.0",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.1",
     "path-extra": "^4.2.1"
   }
 }
