--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poi-plugin-ezexped",
-  "version": "1.7.10",
+  "version": "1.8.0 beta",
   "description": "Expedition made easy",
   "main": "index.es",
   "scripts": {
